--- a/src/app/pages/streams/streams.component.scss
+++ b/src/app/pages/streams/streams.component.scss
@@ -26,6 +26,12 @@
       color: var(--mat-sys-primary);
     }
   }
+
+  button mat-icon {
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .tab-icon {
