--- a/src/app/pages/streams/streams.component.scss
+++ b/src/app/pages/streams/streams.component.scss
@@ -97,6 +97,12 @@
     color: var(--mat-sys-on-surface-variant);
     line-height: 1.5;
   }
+
+  button mat-icon {
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .streams-grid {
