--- a/src/app/components/live-chat/live-chat.component.scss
+++ b/src/app/components/live-chat/live-chat.component.scss
@@ -13,6 +13,10 @@
   width: 100%;
   background: var(--mat-sys-surface-container);
   overflow: hidden;
+
+  &[data-hidden="true"] {
+    display: none;
+  }
 }
 
 .chat-header {
